# hubble-reference-zephyr-ti-simple

./: .gitignore  CMakeLists.txt  README.md  prj.conf  requirements.txt  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: bg22_ek4108a.conf  lp_em_cc2755p10.conf
app/src/: b64.c  b64.h  main.c
src/: main.c
